[UI] PostureView card ui and repaired the logic behind its dropdown

--- a/posture-perfect/src/App.css
+++ b/posture-perfect/src/App.css
@@ -68,21 +68,34 @@ body {
 
 .card-top {
   position: absolute;
-  right: 45px;
-  top: 45px;
-  width: 300px;
-  height: 300px;
+  right: 3%;
+  top: 3%;
+  width: 20%;
+  min-width: 250px;
+  height: 20%;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.6274509804);
-  border-radius: 28px;
+  border-radius: 8%;
   color: #fff;
   z-index: 100;
   background-color: #222;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; /* aligns items to the top */
+  padding: 2%;
 }
 
 .card-title {
   display: flex;
   justify-content: center;
   width: 100%; /* fills the width of the container */
+}
+
+.card-title-top {
+  display: flex;
+  justify-content: center;
+  width: 100%; /* fills the width of the container */
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 .card-bottom {
